seo and alignment issues

--- a/blog/blog1.css
+++ b/blog/blog1.css
@@ -63,33 +63,52 @@ The content `<div>` is where all your content goes.
   color: #333;
   text-align: center;
   padding: 2.5em 2em 0;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #333;
 }
- .header h1 {
-     margin: 0.2em 0;
-     font-size: 3em;
-     font-weight: 300;
- }
+  .header h1 {
+    margin: 0.2em 0;
+    font-size: 3em;
+    font-weight: 300;
+  }
   .header h2 {
-     font-weight: 300;
-     color: #ccc;
-     padding: 0;
-     margin-top: 0;
- }
- 
+    font-weight: 300;
+    color: #333;
+    padding: 0;
+    margin-top: 0;
+  }
+  .header .pure-menu-horizontal {
+    font-weight: 300;
+    font-size: x-large;
+    color: #333;
+    padding: 5px;
+    margin-top: 0;
+  }
+  
+ .content h1{
+  text-align: center;
+  font-size: 300%;
+  margin: 0 auto;
+  padding: 20px;
+  margin-bottom: 50px;
+  line-height: 1.6em;
+ } 
 .content-subhead {
   text-transform: uppercase;
-  color: #aaa;
-  border-bottom: 1px solid #eee;
+  color: #333;
+  border-bottom: 1px solid #333;
   padding: 0.4em 0;
   font-size: 80%;
   font-weight: 500;
   letter-spacing: 0.1em;
+  text-align: center;
 }
 
 .post {
   padding-bottom: 2em;
-  font-size: large;
+  text-align: center;
+  max-width: 1700px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .post-avatar {
@@ -105,10 +124,9 @@ The content `<div>` is where all your content goes.
 }
 
 
-.post-description {
-  font-family: Georgia, "Cambria", serif;
+.post-body {
+  font-size: large;
   color: #444;
-  line-height: 1.8em;
 }
 .post-meta {
   color: #999;
